# Algorithmic-Trading-Simulator

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT.md  DEPLOY.md  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  hft_test.db-journal  main.py  pyproject.toml  pytest.ini  render.yaml  run-local.ps1
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  001_initial.py
app/api/: routes.py
app/api/v1/: __init__.py  auth.py
app/auth/: dependencies.py  jwt_handler.py  password.py
app/core/: config.py  database.py  logger.py  rate_limit.py
app/execution/: execution_engine.py
app/infra/: __init__.py  redis_client.py
app/market/: candle_engine.py  fetch_stock_data.py  market_data_engine.py  market_state.py
app/ml/: backtesting.py  predictor.py
app/ml/training/: train_lstm.py
app/models/: __init__.py  base.py  equity_history.py  idempotency_record.py  order.py  position.py  risk_profile.py  trade.py  user.py
app/portfolio/: equity_engine.py  equity_snapshot_engine.py  equity_snapshot_service.py  performance_engine.py  pnl_engine.py  portfolio_service.py
app/quant/: backtester.py  decision_logic.py  optimizer.py  option_pricer.py  return_predictor.py  sentiment.py  signal_engine.py  vol_surface.py
app/quant/factors/: mean_reversion_factor.py  momentum_factor.py  trend_factor.py  volatility_factor.py
app/quant/regime/: __init__.py  regime_model.py
app/risk/: daily_loss_engine.py  risk_engine.py
app/schemas/: trade.py  user.py
app/seed/: __init__.py  demo.py
app/services/: __init__.py  auth_service.py
app/websocket/: manager.py  market_stream.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: .fuse_hidden0000000f00000001  .fuse_hidden0000000f00000002  .fuse_hidden0000000f00000003  .fuse_hidden0000000f00000004  .fuse_hidden0000000f00000005  .fuse_hidden0000000f00000006  .fuse_hidden0000001000000002  .fuse_hidden0000001000000003  .fuse_hidden0000001000000004  .fuse_hidden0000001000000005  .fuse_hidden0000001000000006  .fuse_hidden0000001000000007  .fuse_hidden0000001400000002  .fuse_hidden0000001500000003  App.jsx  index.css  main.jsx
frontend/src/components/auth/: AuthScene.jsx
frontend/src/components/charts/: AllocationPie.jsx  CandlestickChart.jsx  EquityChart.jsx  StockMiniChart.jsx
frontend/src/components/common/: Button.jsx  ErrorMessage.jsx  LoadingSpinner.jsx  RiskMonitor.jsx  TradeFeed.jsx
frontend/src/components/layout/: .fuse_hidden0000001300000001  .fuse_hidden0000001400000002  .fuse_hidden0000001400000004  .fuse_hidden0000001400000005  .fuse_hidden0000001400000006  .fuse_hidden0000001400000007  .fuse_hidden0000001400000008  .fuse_hidden0000001500000003  .fuse_hidden0000001500000005  .fuse_hidden0000001500000006  .fuse_hidden0000001500000007  .fuse_hidden0000001500000008  .fuse_hidden0000001500000009  .fuse_hidden0000001600000004  .fuse_hidden0000001600000006  .fuse_hidden0000001600000007  .fuse_hidden0000001600000008  .fuse_hidden0000001600000009  .fuse_hidden000000160000000a  .fuse_hidden0000001900000004  .fuse_hidden0000001a00000005  .fuse_hidden0000001b00000006  DashboardLayout.jsx  PriceTicker.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/components/trading/: AISignalPanel.jsx  OrderTicket.jsx  PositionsTable.jsx  StockDetailsPanel.jsx  SymbolSearch.jsx  TradeConfirmation.jsx  TradingPanel.jsx
frontend/src/components/ui/: .fuse_hidden0000001100000001  .fuse_hidden0000001100000002  .fuse_hidden0000001900000001  .fuse_hidden0000001b00000002  .fuse_hidden0000001c00000003  .fuse_hidden0000001d00000004  .fuse_hidden0000001e00000005  Badge.jsx  Card.jsx  InfoButton.jsx  Modal.jsx  MonteCarloViz.jsx  StatCard.jsx  VolHeatmap.jsx  VolSurface3D.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useAuth.js  useAuthHydration.js  useMarket.js  usePerformance.js  usePortfolio.js
frontend/src/lib/: queryClient.js
frontend/src/pages/: .fuse_hidden0000001000000001  .fuse_hidden0000001100000002  .fuse_hidden0000001200000001  Account.jsx  Backtester.jsx  Dashboard.jsx  Login.jsx  Market.jsx  MarketRegime.jsx  Optimizer.jsx  OptionPricer.jsx  PaperAccount.jsx  Performance.jsx  Portfolio.jsx  Predictor.jsx  QuantLab.jsx  Register.jsx  Sentiment.jsx  Trade.jsx  VolForecast.jsx  VolSurface.jsx
frontend/src/services/: apiClient.js  authService.js  backtestService.js  optimizerService.js  optionService.js  performanceService.js  portfolioService.js  predictService.js  regimeService.js  sentimentService.js  tradeService.js  volService.js  websocket.js
frontend/src/store/: authStore.js  marketStore.js
frontend/src/utils/: colormap.js  formatCurrency.js  glossary.js  stockSymbols.js
scripts/: cleanup_local.sh  start.sh
tests/: conftest.py  test_api.py  test_demo.py  test_quant.py  test_rate_limit.py
