# ============================================================================
# pyproject.toml — HFT Trading Platform
#
# Replaces requirements.txt (audit finding 3.7). Single source of dependency
# truth, with explicit dev/runtime split. Generates a hashed lockfile via
# `uv lock` (preferred) or `pip-compile`.
#
# Phase 2.0 deliverable. See ROADMAP.md.
# ============================================================================

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hft-platform"
version = "0.2.0"
description = "Production-grade quantitative trading platform simulator."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Akki", email = "cakshatn11@gmail.com" }]
keywords = ["trading", "quant", "fastapi", "websocket", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

# ----------------------------------------------------------------------------
# Runtime dependencies — locked surface per ARCHITECTURE.md 16.4.
# Each entry has a one-line rationale to defend in code review.
# ----------------------------------------------------------------------------
dependencies = [
    # Web framework + ASGI server
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.34",
    "python-multipart>=0.0.12,<0.1",          # form parsing for auth endpoints
    "slowapi>=0.1.9,<0.2",                    # rate limiting middleware

    # Data validation / config
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.6.0,<3",

    # Database (async SQLAlchemy 2.0 stack per ADR-0001)
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30.0,<0.31",                  # async Postgres driver
    "psycopg2-binary>=2.9.10,<3",             # sync driver (alembic + admin tools)
    "aiosqlite>=0.20.0,<0.21",                # async SQLite for tests
    "alembic>=1.14.0,<2",

    # Cache + pub/sub + idempotency store
    "redis[hiredis]>=5.2.0,<6",
    # In-memory Redis-compatible fallback for local dev / CI (no external infra)
    "fakeredis>=2.23.0,<3",

    # Auth: pyjwt over python-jose (better maintained, audit 3.7)
    "pyjwt[crypto]>=2.10.0,<3",
    "bcrypt>=4.2.0,<5",                       # direct, not via passlib (audit 3.7)

    # HTTP client
    "httpx>=0.27.0,<0.29",

    # Market data (synchronous, isolated in asyncio.to_thread)
    "yfinance>=0.2.50,<0.3",

    # Numerics (kept lean — TensorFlow removed per audit 3.7)
    "pandas>=2.2.0,<3",
    "numpy>=1.26.0,<3",

    # Observability
    "loguru>=0.7.2,<0.8",
    "prometheus-client>=0.21.0,<0.22",

    # Utilities
    "python-ulid>=3.0.0,<4",                  # unique IDs for events / messages
    "python-dotenv>=1.0.0,<2",
]

# ----------------------------------------------------------------------------
# Optional dependency groups.
#
# Removed from runtime (audit 3.7):
#   - tensorflow / keras  : 500MB+ for a single predict() call. Phase 4 swaps
#                           in onnxruntime (much smaller). Until then, ML is
#                           gracefully disabled in predictor.py.
#   - passlib             : unmaintained; bcrypt 4.x incompatibility footgun.
#   - python-jose         : less maintained than pyjwt.
#   - redis-py-cluster    : deprecated, conflicts with redis>=5.
#   - celery              : never imported. Replaced by asyncio supervisor.
#   - apscheduler         : never imported.
#   - alpha-vantage       : never wired.
#   - sentry-sdk          : deferred to Phase 3.3.
# ----------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    # Test stack
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-cov>=6.0.0,<7",
    "factory-boy>=3.3.0,<4",                  # test fixtures

    # Lint / format / type-check (replaces black + isort + flake8 + mypy split)
    "ruff>=0.8.0,<0.9",                       # one tool replaces flake8/black/isort
    "mypy>=1.13.0,<2",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",                   # kept for type stub backward-compat
]

ml = [
    # Phase 4 — installed only on the training workstation, never in API image
    "onnxruntime>=1.20.0,<2",
    "scikit-learn>=1.5.0,<2",
    "lightgbm>=4.5.0,<5",
]

# ----------------------------------------------------------------------------
# Tool configuration
# ----------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions", "frontend"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # bugbear
    "UP",     # pyupgrade
    "SIM",    # simplify
    "C4",     # comprehensions
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function-call-in-default-argument (FastAPI Depends() pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "S101"]                  # asserts are fine in tests

[tool.mypy]
python_version = "3.11"
strict = false                                 # graduated typing — strict in Phase 3
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false                  # relax during migration
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/", "frontend/"]

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

["tests"]
addopts = "-ra -q --strict-markers --tb=short"
markers = [
    "unit: pure unit tests, no I/O",
    "integration: integration tests (db, redis, http)",
    "slow: tests >1s",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]
